# mars

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cloc.sh  cmake_install.cmake  main.c  mars  meson.build
.cmake/api/v1/reply/: cache-v2-9b2a9a37da575751bf58.json  cmakeFiles-v1-4b83d02bfe5253b69c70.json  codemodel-v2-788caa7658592da445da.json  index-2024-06-14T12-16-24-0245.json  target-mars-Debug-651a8b2663e988f30200.json
src/: meson.build  types.c  types.h
src/ev/: epoll.c  epoll.h  ev.c  ev.h  evloop.c  evloop.h  linux.c  meson.build
src/lib/: arena.c  arena.h  array.h  buffer.c  buffer.h  byte.h  itoa.c  itoa.h  keyval.c  keyval.h  list.c  list.h  memcmpfold.c  memcmpfold.h  meson.build  slice.c  slice.h
src/misc/: array.h  buffer.c  buffer.h  keyval.c  keyval.h  memcmpfold.c  meson.build  types.h
src/misc/buffer/: buffer.c  buffer.h  meson.build
src/net/: client.c  client.h  meson.build
src/net/http/: body.c  body.h  core.c  core.h  entity.h  mars_http.h  mars_http_parser.c  mars_http_parser.h  mars_http_statuses.c  meson.build  parser.c  parser.h  protocol.h  request.c  request.h  response.c  response.h  serializer.c  serializer.h  status.h
src/net/http/encodings/: chunked.c  chunked.h  encoding.h  meson.build  plain.c  plain.h
src/net/tcp/: client.c  client.h
src/report/: meson.build  report.c  report.h
src/report/providers/: filewriter.c  filewriter.h  meson.build
subprojects/: unity.wrap
tests/: meson.build  test_buffer.c  test_dummy_client.c  test_encodings.c  test_ev_pool.c  test_keyval.c  test_parser.c  test_request.c  test_serializer.c
tests/dummy/: client.c  client.h  meson.build
