tests += [
    ['buffer', 'test_buffer.c'],
    ['request', 'test_request.c'],
    ['key-value storage', 'test_keyval.c'],
    ['dummy client', 'test_dummy_client.c'],
    ['http/1 parser', 'test_parser.c'],
    ['http/1 encodings', 'test_encodings.c'],
    ['http/1 serializer', 'test_serializer.c'],
]
